Домашка 10 - процессы, интерпритатор

--- a/TASK10/ex2/Makefile
+++ b/TASK10/ex2/Makefile
@@ -1,8 +1,12 @@
-1 d10ex2: d10ex2.o 
-		gcc d10ex2.o -o d10ex -lpanel -lncurses
+1 d10ex2: d10ex2.o d10ex2func
+		gcc d10ex2.o -o d10ex 
 2 d10ex2.o: d10ex2.c 
 		gcc d10ex2.c -c 
-
+		
+3 d10ex2func: d10ex2func.o 
+		gcc d10ex2func.o -o d10ex2f 
+4 d10ex2func.o: d10ex2func.c
+		gcc d10ex2func.c -c
 
 
 
